--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="images/meguro_masaki.png"><img src="images/meguro_masaki.png" alt="MEGURO MASAKI"></a>
                 </li>
                 <li class="image-select-list-item">
-                    <a href="images/imai_cosmo.png"><img src="images/imai_cosmo.png" alt="COSMA IMAI"></a>
+                    <a href="images/imai_cosmo.png"><img src="images/imai_cosmo.png" alt="COSMO IMAI"></a>
                 </li>     
                 <li class="image-select-list-item">
                     <a href="images/adam_dudley.png"><img src="images/adam_dudley.png" alt="ADAM DUDLEY"></a>
