Added animated gif

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         <div class="image-display">
             <div class="image-name">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4100 495">
-                    <text id="TOKITA_OHMA" data-name="TOKITA OHMA" fill="coral" font-size="385" font-family="SnapITC-Regular, Snap ITC">TOKITA OHMA</text>
+                    <text id="TOKITA_OHMA" 
+                    data-name="TOKITA OHMA" 
+                    fill="coral" 
+                    font-size="385" 
+                    font-family="SnapITC-Regular, Snap ITC">
+                    TOKITA OHMA
+                    </text>
                   </svg>
             </div>
             <div class ="image-display-container">
